# practice_langchain

./: .env.example  Makefile  README.md  pyproject.toml
src/: __init__.py
src/evaluation/: quickstart.py
src/prompt/: finish_reason.py
